--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Jose Fernandez",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
